...
    private func proceedToNextQuestionOrResults() {
        
        if isLastQuestion() {
            
            let text = statisticService.store(correct: self.correctAnswers, total: self.questionsAmount)
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз?")
            
            viewController?.show(quiz: viewModel)
            
        } else {
...
